Fix spacing in between elements

--- a/version_control/Codurance_September2020/css/pages/event-page.css
+++ b/version_control/Codurance_September2020/css/pages/event-page.css
@@ -13,7 +13,7 @@
   background: linear-gradient(337deg, rgba(239,119,38,0.3967787798713235) 0%, 
                                       rgba(255,208,0,0.1026611328125) 77%, 
                                       rgba(255,255,255,1) 100%) fixed;
-  padding-top: 3em;
+  padding-top: 2em;
   padding-bottom: 5em;
 }
 
@@ -24,7 +24,7 @@
 .events-description__wrapper{
   background: white;
   margin: 0 2.5em;
-  padding: 2.5em 7.5em;
+  padding: 1.5em 7.5em;
   text-align: center;
   {{ utils.card_shadow() }}
 }
@@ -37,6 +37,7 @@
 }
 
 .events-description h2{
+  {{ utils.freed() }}
   font-weight: var(--heavy-font-weight);
 }
 
@@ -44,7 +45,7 @@
   max-width: {{ultimate_max_width}}px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .card-slider__heading-wrapper {
